# CPP42

./: .gitignore  CMakeLists.txt
CPP00/ex00/: megaphone  megaphone.cpp
CPP00/ex01/: Contact.cpp  Contact.h  Makefile  PhoneBook.cpp  PhoneBook.h  main.cpp  phonebook
CPP01/ex00/: Makefile  Zombie.cpp  Zombie.h  main.cpp  zombie
CPP01/ex01/: Makefile  Zombie.cpp  Zombie.h  main.cpp  zombie  zombieHorde.cpp
CPP01/ex02/: Makefile  brain  main.cpp
CPP01/ex03/: HumanA.cpp  HumanA.h  HumanB.cpp  HumanB.h  Makefile  Weapon.cpp  Weapon.h  main.cpp  violence
CPP01/ex04/: Makefile  Read.cpp  Read.h  Write.cpp  Write.h  main.cpp  replace  text.txt
CPP01/ex05/: Harl.cpp  Makefile  main.cpp
CPP01/ex06/: Harl.cpp  Harl.h  Makefile  harlFilter  main.cpp
CPP02/ex00/: Fixed.cpp  Fixed.h  fixed  main.cpp
CPP02/ex01/: Fixed.cpp  Fixed.h  Makefile  fixed
CPP02/ex02/: Fixed.cpp  Fixed.h  fixed  main.cpp
CPP03/ex00/: ClapTrap.cpp  ClapTrap.h  Makefile  main.cpp
CPP03/ex01/: ClapTrap.cpp  Makefile  ScavTrap.cpp  ScavTrap.h  main.cpp
CPP03/ex02/: ClapTrap.h  FragTrap.cpp  FragTrap.h  Makefile  ScavTrap.cpp  main.cpp
CPP04/ex00/: Animal.h  Cat.cpp  Cat.h  Dog.cpp  Dog.h  Makefile  main.cpp
CPP04/ex01/: Animal.cpp  Animal.h  Brain.cpp  Brain.h  Cat.cpp  Dog.h  Makefile  WrongAnimal.cpp  WrongAnimal.h  WrongCat.h
CPP04/ex02/: Animal.cpp  Animal.h  Brain.cpp  Cat.cpp  Cat.h  Dog.cpp  WrongAnimal.cpp  WrongCat.cpp  main.cpp
